# grant_filler_local

./: .env.example  .gitignore  FEATURES.md  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  deps.py  download_filename.py  job_runner.py  main.py  models.py  preferences.py  schemas.py  storage.py
backend/app/services/: answer_coerce.py  answers.py  evidence_ids.py  export.py  export_datetime.py  gemini_client.py  inference_factory.py  ingest.py  json_llm.py  json_safe.py  learn_org_facts.py  llm_types.py  ollama.py  org_profile_migrate.py  questions_extract.py  retrieve.py  retry_remote.py  semantic_facts.py  web_fetch.py
backend/tests/: conftest.py  test_answer_coerce.py  test_answer_empty.py  test_api_integration.py  test_download_filename.py  test_evidence_ids.py  test_export_content.py  test_export_datetime.py  test_health.py  test_ingest.py  test_job_runner_direct.py  test_json_safe.py  test_ollama_json.py  test_questions_extract_helpers.py  test_retrieve.py  test_semantic_facts.py  test_settings_ail.py  test_storage.py  test_web_fetch.py
docs/: BUILD_PLAN_A_I_L.md  BUILD_PLAN_E_F.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  copy.ts  errors.test.ts  errors.ts  index.css  main.tsx  orgBranding.tsx  theme.test.ts  theme.ts
frontend/src/components/: QuestionAnswerField.tsx
scripts/: generate_test_grant_pdfs.py  serve_grant_web_fixture.py
testdata/: README.md
testdata/grant_web_fixture/: README.md  index.html
(+13 files in other folders)
